<resources>
    <string name="app_name"></string>
    <string name="sign_in">sign in</string>
    <string name="welcome_text">Welcome!</string>
    <string name="information">Please Insert Your Information:</string>
    <string name="register">register</string>
    <string name="not_signed_in">Not Registered Yet?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone:</string>
    <string name="phone">Phone Number</string>
    <string name="bracelet_id">Bracele\nID:</string>
    <string name="id">Bracelet ID</string>
    <string name="password_string">Password:</string>
    <string name="fall_history">Fall\nHistory</string>
    <string name="pulse_history">Pulse\nHistory</string>
    <string name="rate">Rate</string>
    <string name="location">Location</string>
    <string name="emergency_call">Emergency\nCall</string>
    <string name="date_label">Date</string>
    <string name="name_of_user">Your\nName:</string>
    <string name="user_name">Your Name</string>
    <string name="current_pulse">Current\nPulse</string>
    <string name="bpm">BPM</string>
    <string name="show_location">Show Location Of Falls On Map</string>
    <string name="log_out_button">Log Out</string>
    <string name="greeting">Hello {} </string>
    <string name="pulse_calculation">Calculating...</string>
</resources>
