<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_page_background_1"
        tools:layout_editor_absoluteX="-50dp"
        tools:layout_editor_absoluteY="34dp">

        <TableLayout
            android:id="@+id/fallHistoryTableLayout"
            android:layout_width="match_parent"
            android:layout_height="671dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_medium"
                android:gravity="center"
                android:text="@string/fall_history"
                android:textColor="#36486b"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TableRow
                android:id="@+id/headerTableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#deeaee"
                android:padding="10dp">

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/archivo_black"
                    android:gravity="center"
                    android:text="@string/date_label"
                    android:textColor="#36486b" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/showOnMapButton"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/show_location" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>