<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_page_background_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/emergencyCallButton"
        android:layout_width="89dp"
        android:layout_height="87dp"
        android:background="@drawable/emergency_call_circle_button"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/emergency_call"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/getCurrentPulseButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/current_pulse"
        android:textColor="#36486b"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/emergencyCallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/getPulseHistoryButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/pulse_history"
        android:textColor="#36486b"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCurrentPulseButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getFallHistoryButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/circle_button"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/fall_history"
        android:textColor="#36486b"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/emergencyCallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/getPulseHistoryButton"
        app:layout_constraintTop_toBottomOf="@+id/getCurrentPulseButton"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/logOutButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="284dp"
        android:gravity="center"
        android:padding="15dp"
        android:src="@drawable/circle_button"
        android:text="@string/log_out_button"
        android:textColor="#36486b"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/getFallHistoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/GreetingUserTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:textColor="#36486b"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/getCurrentPulseButton"
        app:layout_constraintEnd_toStartOf="@+id/logOutButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>